# wordcondenser

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/craving/workdir/: dna.yaml
dnas/lobby/workdir/: dna.yaml
tests/src/craving/craving/: all-anecdotes.test.ts  all-associations.test.ts  all-offers.test.ts  all-reflections.test.ts  anchor-to-cravings.test.ts  anecdote.test.ts  association-to-resonators.test.ts  association.test.ts  comment-on-offer.test.ts  comment-on-reflection.test.ts  craving.test.ts  offer.test.ts  reflection.test.ts  (+1 more)
ui/: index.html  package.json  vite.config.ts
ui/src/: colors.ts  condenser-store.ts  contexts.ts  craving-context.ts  craving-service.ts  craving-store.ts  craving-view.ts  holochain-app.ts  intro.ts  loading-animation.ts  lobby-context.ts  lobby-service.ts  lobby-store.ts  lobby-view.ts  no-cookies-ever.ts  sharedStyles.ts  types.ts  utils.ts
ui/src/components/: blue-button.ts  btn-round.ts  mvb-textarea.ts  mvb-textfield.ts
ui/src/condenser/: all-available-cravings.ts  all-cravings.ts  all-disabled-cravings.ts  all-offers.ts  all-reflections-old.ts  all-reflections.ts  association-map-element.ts  association-map.ts  craving-detail.ts  create-association.ts  create-comment-on-reflection.ts  create-craving.ts  create-offer.ts  create-reflection.ts  offer-element.ts  reflection-element.ts  types.ts
ui/src/lobby/: all-craving-recipes.ts  all-lobbies.ts  create-lobby.ts  disabled-lobby-detail.ts  join-lobby-from-link.ts  join-lobby.ts  list-lobbies.ts  lobby-detail.ts
workdir/: happ.yaml  web-happ.yaml
(+51 files in other folders)
